done entertaiment page and add sbanner slide

--- a/src/app/shared/components/section/splaylist-slide/splaylist-slide.component.html
+++ b/src/app/shared/components/section/splaylist-slide/splaylist-slide.component.html
@@ -1,5 +1,29 @@
-<div class="listvideo hotPlaylistvideo">
+<div class="listPlaylistslide">
     <ul class="bxslider">
+        <li>		
+            <app-playlistitem></app-playlistitem>			 	
+        </li>
+
+        <li>		
+            <app-playlistitem></app-playlistitem>			 	
+        </li>
+
+        <li>		
+            <app-playlistitem></app-playlistitem>			 	
+        </li>
+
+        <li>		
+            <app-playlistitem></app-playlistitem>			 	
+        </li>
+
+        <li>		
+            <app-playlistitem></app-playlistitem>			 	
+        </li>
+
+        <li>		
+            <app-playlistitem></app-playlistitem>			 	
+        </li>
+
         <li>		
             <app-playlistitem></app-playlistitem>			 	
         </li>
