--- a/src/app/shared/components/section/splaylist/splaylist.component.scss
+++ b/src/app/shared/components/section/splaylist/splaylist.component.scss
@@ -1,6 +1,7 @@
 
     .listplaylists 
     {
+        overflow: hidden;
         app-playlistitem
         {
             float: left;               
