--- a/src/app/shared/components/section/svideo-slide/svideo-slide.component.html
+++ b/src/app/shared/components/section/svideo-slide/svideo-slide.component.html
@@ -1,3 +1,42 @@
-<p>
-  svideo-slide works!
-</p>
+<div class="listvideos">
+  <ul class="bxslider">
+    <li>
+      <app-videoitem></app-videoitem>
+    </li>
+    <li>
+      <app-videoitem></app-videoitem>
+    </li>
+    <li>
+      <app-videoitem></app-videoitem>
+    </li>
+    <li>
+      <app-videoitem></app-videoitem>
+    </li>  
+    <li>
+        <app-videoitem></app-videoitem>
+      </li>
+      <li>
+        <app-videoitem></app-videoitem>
+      </li>
+      <li>
+        <app-videoitem></app-videoitem>
+      </li>
+      <li>
+        <app-videoitem></app-videoitem>
+      </li>  
+      <li>
+          <app-videoitem></app-videoitem>
+        </li>
+        <li>
+          <app-videoitem></app-videoitem>
+        </li>
+        <li>
+          <app-videoitem></app-videoitem>
+        </li>
+        <li>
+          <app-videoitem></app-videoitem>
+        </li>  
+  </ul>
+
+
+</div>
