done for knowledge page

--- a/src/app/shared/components/items/playlistitem/playlistitem.component.html
+++ b/src/app/shared/components/items/playlistitem/playlistitem.component.html
@@ -1,5 +1,5 @@
 <article class="playlistitems" >
-    <p class="thumbnail" style="background-image: url(../assets/images/thumb-larger.jpg)">
+    <p class="thumbnail" style="background-image: url(../assets/images/edm.png)">
       <a title="Weekend Buzz" rel="bookmark" href="#">			
       </a>
       <span class="playitems">
