--- a/src/app/shared/components/section/sbanner-slide/sbanner-slide.component.html
+++ b/src/app/shared/components/section/sbanner-slide/sbanner-slide.component.html
@@ -1,6 +1,6 @@
 
 <div class="vf-slider">
-  <ul class="category-slider">
+  <ul class="banner-slider">
     <li><a href="#">
       <article>
         <div class="cover-slider" style="background-image: url(../assets/images/banner1.jpg)"></div>
