--- a/src/app/shared/components/section/splaylist-slide/splaylist-slide.component.html
+++ b/src/app/shared/components/section/splaylist-slide/splaylist-slide.component.html
@@ -1,5 +1,5 @@
 <div class="listPlaylistslide">
-    <ul class="bxslider">
+    <ul class="playlistslider">
         <li>		
             <app-playlistitem></app-playlistitem>			 	
         </li>
