--- a/src/app/shared/components/section/svideo-slide/svideo-slide.component.html
+++ b/src/app/shared/components/section/svideo-slide/svideo-slide.component.html
@@ -1,5 +1,5 @@
 <div class="listvideos">
-  <ul class="bxslider">
+  <ul class="videoslider">
     <li>
       <app-videoitem></app-videoitem>
     </li>
