--- a/src/app/modules/entertainment-page/entertainment-page.component.html
+++ b/src/app/modules/entertainment-page/entertainment-page.component.html
@@ -18,7 +18,7 @@
   <div class="container">
     <app-sbanner-slide></app-sbanner-slide>   
 
-      <div class="section  vf-newupdatemusic-section">
+      <div class="section wrap-container">
         <header class="menuSection">
           <h3 class="title">
             <a href="#" title="Mới cập nhật">Mới cập nhật</a>	
@@ -28,7 +28,7 @@
         
       </div><!-- section -->
     
-    <div class="section  vf-newmusic-section">
+    <div class="section wrap-container">
       <header class="menuSection">
         <h3 class="title">
         <a href="#" title=">Mới thêm vào">Mới thêm vào</a>	
@@ -38,7 +38,7 @@
       <app-splaylist-slide></app-splaylist-slide>
     </div><!-- section -->
 
-    <div class="section vf-communitynewvideo">
+    <div class="section community-section">
       <header class="menuSection">
         <h3 class="title">
           <a href="#" title="playlist đề cử"><span>CỘNG ĐỒNG </span> - VIDEO MỚI THÊM VÀO</a> 
@@ -48,7 +48,7 @@
       
     </div>
 
-    <div class="section hotPlaylistSection vf-communitynewPlaylist">
+    <div class="section community-section">
       <header class="menuSection">
         <h3 class="title">
           <a href="#" title="playlist đề cử"><span>CỘNG ĐỒNG</span> - PLAYLIST MỚI THÊM VÀO</a> 
