--- a/src/app/shared/components/section/splaylist-slide/splaylist-slide.component.scss
+++ b/src/app/shared/components/section/splaylist-slide/splaylist-slide.component.scss
@@ -7,9 +7,9 @@
             max-width: calc(100% + 6px ) !important;
             .bx-viewport
             {
-                left: -3px;
+                left: -6px;
                 width: calc(100% + 6px ) !important;
-                .bxslider
+                .playlistslider
                 {
                     overflow: initial;
                     max-height: 342px;
@@ -30,7 +30,7 @@
                 }
                  &.bx-next
                 {
-                    right: -22px;
+                    right: -27px;
                     background-position: 14px -425px ;
                    
                 }
