--- a/src/app/shared/components/items/genreitem/genreitem.component.html
+++ b/src/app/shared/components/items/genreitem/genreitem.component.html
@@ -1,3 +1,25 @@
-<p>
-  genreitem works!
-</p>
+<article class="genre-items">						
+  <div class="wrap-thumb">
+    <a href="#" class="thumbnail" style="background-image:url(../assets/images/genre.jpg) "></a> 
+  </div>	
+
+  <div class="wrap-introgenre">
+    <div class="wrap-title">
+      <header><h3 class="title"><a href="#">Pop</a> </h3></header>								
+    </div>						
+    <div class="vf-mainofgenres">
+      <div class="wrap">
+        <a href="#">Miles Davis</a>
+        <a href="#">Thelonious Monk</a>
+        <a href="#">Oscar Peterson</a>
+        <a href="#">Ella Fitzgerald</a>
+        <a href="#">Dexter Gordon</a>
+        <a href="#">The Modern Jazz Quartet</a>
+        <a href="#">Lou Donaldson</a>
+        <a href="#">Sonny Rollins</a>
+      </div>
+      
+      
+    </div>
+  </div>						
+</article>
