add new page: genre detail

--- a/src/app/modules/home-page/home-page.component.html
+++ b/src/app/modules/home-page/home-page.component.html
@@ -3,12 +3,12 @@
     <div class="section newListvideo">
       <article class="videoPlaylist vf-suggest-playlist" >
         <div class="big-thumbnail" style="background-image: url(../assets/images/Dinner.jpg)" >							
-          <a title="Today top hits" rel="bookmark" href="#">	
+          <a title="Today top hits" rel="bookmark" routerLink="am-nhac">	
 
           </a>
         </div>
         <p class="thumbnail" style="background-image: url(../assets/images/Dinner.jpg)">
-          <a title="Today top hits" rel="bookmark" href="#">	
+          <a title="Today top hits" rel="bookmark" routerLink="am-nhac">	
             <span class="playitems">
               <span class="icon-webs playicon"></span>								
             </span>												
@@ -22,7 +22,7 @@
 
               <header class="meta">
                 <h3 class="title">
-                  <a title="Today top hits" rel="bookmark" href="#">Những kẻ lắm lời</a>
+                  <a title="Today top hits" rel="bookmark" routerLink="am-nhac">Những kẻ lắm lời</a>
                 </h3>
                                     
               </header>
