--- a/src/app/shared/components/items/artistitem/artistitem.component.html
+++ b/src/app/shared/components/items/artistitem/artistitem.component.html
@@ -1,6 +1,6 @@
-<article class="artist-items">						
+<article class="artist-item">						
     <div class="wrap-thumb">
-      <p class="thumbnail" style="background-image:url(images/adele.png) "><a href="#" ></a></p> 
+      <p class="thumbnail" style="background-image:url(./assets/images/adele.png) "><a href="#" ></a></p> 
       <button class="vf-followplbtn" title="Theo dõi playlist">
         <span class=" followpl-icon">
             <i class="fa fa-star-o" aria-hidden="true"></i>
@@ -9,7 +9,11 @@
       </button> 
     </div>							
     <div class="wrap-title">
-      <header><h3 class="title"><a href="#">demo</a> </h3></header>
+      <header><h3 class="title">
+        <a href="#">Adele
+            <span class="art-birthday">Dec 13th, 1989</span>
+          </a> 
+      </h3></header>
       <p class="totalAlbums"><a href="#"> 5 albums</a></p>
       <p class="rating">
         <span class="fullstar fonticons"><i class="fa fa-star" aria-hidden="true"></i></span>
