--- a/src/app/shared/components/section/sartist-slide/sartist-slide.component.html
+++ b/src/app/shared/components/section/sartist-slide/sartist-slide.component.html
@@ -1,7 +1,35 @@
-<div class="listartist artist-section">
+<div class="listartists artists-section">
     <ul class="artistslider">
-      <li>
-          <app-artistitem></app-artistitem>
-      </li>
+        <li>
+            <app-artistitem></app-artistitem>
+        </li>
+        <li>
+            <app-artistitem></app-artistitem>
+        </li>
+        <li>
+            <app-artistitem></app-artistitem>
+        </li>
+        <li>
+            <app-artistitem></app-artistitem>
+        </li>
+        <li>
+            <app-artistitem></app-artistitem>
+        </li>
+
+        <li>
+            <app-artistitem></app-artistitem>
+        </li>
+        <li>
+            <app-artistitem></app-artistitem>
+        </li>
+        <li>
+            <app-artistitem></app-artistitem>
+        </li>
+        <li>
+            <app-artistitem></app-artistitem>
+        </li>
+        <li>
+            <app-artistitem></app-artistitem>
+        </li>
     </ul>
 </div>
