--- a/src/app/shared/components/items/genreitem/genreitem.component.html
+++ b/src/app/shared/components/items/genreitem/genreitem.component.html
@@ -1,11 +1,11 @@
 <article class="genre-items">						
   <div class="wrap-thumb">
-    <a href="#" class="thumbnail" style="background-image:url(../assets/images/genre.jpg) "></a> 
+    <a title="genre"  routerLink="/am-nhac/genre-detail"  class="thumbnail" style="background-image:url(../assets/images/genre.jpg) "></a> 
   </div>	
 
   <div class="wrap-introgenre">
     <div class="wrap-title">
-      <header><h3 class="title"><a href="#">Pop</a> </h3></header>								
+      <header><h3 class="title"><a  title="Pop">Pop</a> </h3></header>								
     </div>						
     <div class="vf-mainofgenres">
       <div class="wrap">
