--- a/src/app/modules/genredetail/genredetail.component.scss
+++ b/src/app/modules/genredetail/genredetail.component.scss
@@ -2,7 +2,7 @@
 
 header.menuSection 
 {
-    position: relative;
+   
     .title
     {
         font-size: 18px;
@@ -55,6 +55,34 @@ header.menuSection
         }
     }
 }
+.wrap-bannerinnerHD
+{
+    margin-bottom: 20px;
+    .wrap-thumbitems
+    {
+        width: 100%;
+        overflow: hidden;
+        .thumbitem
+        {
+            width: 10%;
+            height: 10vw;
+            background-size: cover;
+            background-position: 50% 50%;
+            display: block;
+            float: left;
+        }
+    }
+}
+
+
+.wrap-section
+{
+    position: relative;
+    opacity: 1;
+    margin-bottom: 30px;
+    border-bottom: 1px solid #dcdcdc;
+    padding-bottom: 30px;
+}
 .wrap-dayofartist
 {
     header.menuSection .title
@@ -74,11 +102,11 @@ header.menuSection
                 width: 100%;
                 padding: 10px 5px;
 
-                background: -webkit-linear-gradient(top, transparent 15%, rgba(0, 0, 0, 0.11) 26%, rgba(0, 0, 0, 0.63) 81%, rgba(0, 0, 0, 0.65) 83%);
-                background: -moz-linear-gradient(top, transparent 15%, rgba(0, 0, 0, 0.11) 26%, rgba(0, 0, 0, 0.63) 81%, rgba(0, 0, 0, 0.65) 83%);
-                background: -ms-linear-gradient(top, transparent 15%, rgba(0, 0, 0, 0.11) 26%, rgba(0, 0, 0, 0.63) 81%, rgba(0, 0, 0, 0.65) 83%);
-                background: -o-linear-gradient(top, transparent 15%, rgba(0, 0, 0, 0.11) 26%, rgba(0, 0, 0, 0.63) 81%, rgba(0, 0, 0, 0.65) 83%);
-                background: linear-gradient(top, transparent 15%, rgba(0, 0, 0, 0.11) 26%, rgba(0, 0, 0, 0.63) 81%, rgba(0, 0, 0, 0.65) 83%);
+                // background: -webkit-linear-gradient(top, transparent 15%, rgba(0, 0, 0, 0.11) 26%, rgba(0, 0, 0, 0.63) 81%, rgba(0, 0, 0, 0.65) 83%);
+                // background: -moz-linear-gradient(top, transparent 15%, rgba(0, 0, 0, 0.11) 26%, rgba(0, 0, 0, 0.63) 81%, rgba(0, 0, 0, 0.65) 83%);
+                // background: -ms-linear-gradient(top, transparent 15%, rgba(0, 0, 0, 0.11) 26%, rgba(0, 0, 0, 0.63) 81%, rgba(0, 0, 0, 0.65) 83%);
+                // background: -o-linear-gradient(top, transparent 15%, rgba(0, 0, 0, 0.11) 26%, rgba(0, 0, 0, 0.63) 81%, rgba(0, 0, 0, 0.65) 83%);
+                // background: linear-gradient(top, transparent 15%, rgba(0, 0, 0, 0.11) 26%, rgba(0, 0, 0, 0.63) 81%, rgba(0, 0, 0, 0.65) 83%);
 
 
                 .title 
@@ -128,6 +156,103 @@ header.menuSection
         }
     }
 }
+
+.vf-main-track
+{
+    padding-bottom: 10px;
+    
+    .wrap-haftsection
+    {
+        width: 100%;
+        &.left 
+        {
+            float: left;
+            padding-right: 10px;
+        }
+        &.right 
+        {
+            float: right;
+            padding-left: 10px;
+        }
+        > header 
+        {
+            .title 
+            {
+                @include styleText(#000000, 18px);
+            }
+        }
+        .listvideo
+        {
+            overflow: hidden;
+            .video 
+            {
+                overflow: hidden;
+                width: calc(50% - 10px );
+                height: 110px;
+                margin:0;
+                margin-bottom: 12px;					
+                float: left;
+                position: relative;
+                padding-right: 100px;
+                &:nth-child(2n) 
+                {
+                    margin-left: 20px;
+                }
+                .thumbnail
+                {
+                    float: left;
+                    margin-right: 10px;
+                    width: 196px;
+                }
+                .meta 
+                {
+                    .title 
+                    {
+                        margin-bottom: 5px;
+                        a
+                        {
+                            font-size: 15px;
+                        }
+                        
+                    }
+                    .uploader
+                    {
+                        display: block;
+                        margin: 6px 0;
+                        a 
+                        {
+                            @include styleText(#828282, 11px);
+                            text-transform: uppercase;
+                        }
+                    }
+                }
+
+
+                .composed-art
+                {
+                    *
+                    {
+                        @include styleText(#666666, 13px);
+                    }
+                    @include styleText(#666666, 13px);
+                    a 
+                    {
+                        color: #6666ff;
+                    }
+                }
+                .wrapPlaynow
+                {
+                    position: absolute;
+                    right: 10px;
+                    top: 0;
+                    bottom: 0;
+                    margin:auto;
+                }
+            }
+        }
+    }
+}
+
 
 .box-loading
 {
