--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,7 @@
 @import "assets/css/relationvideo";
 @import "assets/css/partial/_slidesPlaylist";
 @import "assets/css/partial/_blockplaylists";
+@import "assets/css/partial/_bannerinner.scss";
 
 @import url(/assets/css/jquery.bxslider.css);
 @import url(/assets/css/recommendation.css);
